    codes' causing the output to be ignored (or with a string value, using that
    instead of the Python block's output

  * Additional information is now stored in the question_info logs

  * Added the ability for users to specify that they prefer light text on a
    dark background

  * Updates to the question info cache can now be avoided by setting
    cs_update_questions_cache = False

CHANGED:

  * Suppressed some warnings coming from BeautifulSoup.

  * Changed default session duration to fourteen days instead of two

  * Changed location of lock files to (hopefully) prevent the size of the locks
    directory from growing out of control

  * Javascript files are now located at /js/ instead of /scripts/

  * <chapter>, <section>, <subsection>, and <subsubsection> tags have
    been replaced with <catsoop-chapter>, <catsoop-section>, etc; and a
    conversion script has been provided

  * Moved the default 'remote' Python sandbox and improved the error message
    when the sandbox is offline.

  * Changed the following special variable names to make their purpose clearer:
        - csq_python_sandbox => csq_python_sandbox_type
        - csq_python_interpreter => csq_python_sandbox_interpreter


DEPRECATED:

REMOVED:

  * Due to build issues on some platforms, catsoop no longer depends on uwsgi
    unless [server] is specified when installing.

  * Removed the "cert" login type.

FIXED:

  * Fixed a crash from "render_escaped_dollar" method not existing (triggered
    by mistletoe update?)

  * Fixed multiple issues with "-c" flag and "CATSOOP_CONFIG" environment
    variable

  * Fixed incorrect help text with "catsoop logedit" command

  * Fixed an old bug where submitting an asynchronously-checked question while
    another submission is queued for that same question caused confused results
    to be displayed

  * Fixed a potential bug in the "pythoncode" question type when decoding
    submitted files containing a BOM
