@@ -1,2 +1,18 @@
-* [Manage API Tokens](CURRENT/api_tokens)
-* [Dark Mode Settings](CURRENT/dark_mode)
+<ul id="settingsPages">
+<li><a href="CURRENT/api_tokens">Manage API Tokens</a>
+<li><a href="CURRENT/dark_mode">Dark Mode Settings</a>
+</ul>
+
+<script type="text/javascript">
+// @license magnet:?xt=urn:btih:0b31508aeb0634b347b8270c7bee4d411b5d4109&dn=agpl-3.0.txt AGPL-v3
+var last_non_settings = sessionStorage.getItem('last-non-settings');
+if (last_non_settings !== null){
+    var a = document.createElement('a');
+    a.href = last_non_settings;
+    a.innerText = 'Exit Settings Menu';
+    var li = document.createElement('li');
+    li.append(a);
+    document.getElementById("settingsPages").append(li);
+}
+// @license-end
+</script>
